--- a/public/templates/primary/product-details.html
+++ b/public/templates/primary/product-details.html
@@ -190,7 +190,7 @@
                                         d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
                                     <path d="m9 12 2 2 4-4" />
                                 </svg>
-                                <span>Free shipping on orders over $50</span>
+                                <span>Orders are typically delivered 2 - 3 days for locations within lagos and ibadan, and 4 - 7 days for other locations</span>
                             </div>
                             <div class="feature">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -200,18 +200,9 @@
                                         d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
                                     <path d="m9 12 2 2 4-4" />
                                 </svg>
-                                <span>30-day money-back guarantee</span>
+                                <span>We accept returns within 3 days of delivery, provided items are in good condition</span>
                             </div>
-                            <div class="feature">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round">
-                                    <path
-                                        d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
-                                    <path d="m9 12 2 2 4-4" />
-                                </svg>
-                                <span>1-year warranty</span>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
