--- a/public/templates/primary/marketplace.html
+++ b/public/templates/primary/marketplace.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,6 +9,8 @@
     <script defer src="https://api.pluggn.com.ng/template/primary/js/config.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/global.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/marketplace.css" crossorigin="anonymous">
+    <!-- Added color selection CSS -->
+    <link rel="stylesheet" href="css/color-selection.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -277,20 +277,23 @@
                 </div>
             </div>
         </div>
-    <!-- Updated Footer Bottom Section - Replace your existing footer-bottom div with this -->
-    <div class="footer-bottom">
-        <p>&copy; 2023 Store. All rights reserved.</p>
-        <div class="powered-by">
-            <span>Powered by</span>
-            <img src="https://api.pluggn.com.ng/image/pluggn_logo.png" alt="Pluggn" class="brand-logo" crossorigin="anonymous">
+        <!-- Updated Footer Bottom Section -->
+        <div class="footer-bottom">
+            <p>&copy; 2023 Store. All rights reserved.</p>
+            <div class="powered-by">
+                <span>Powered by</span>
+                <img src="https://api.pluggn.com.ng/image/pluggn_logo.png" alt="Pluggn" class="brand-logo" crossorigin="anonymous">
+            </div>
         </div>
-    </div>
     </div>
 </footer>
 
 <!-- Scripts -->
 <script src="https://api.pluggn.com.ng/template/primary/js/product.js" crossorigin="anonymous"></script>
 <script src="https://api.pluggn.com.ng/template/primary/js/cart.js" crossorigin="anonymous"></script>
+<!-- Added color selection and enhanced checkout scripts -->
+<script src="js/color-selection.js"></script>
+<script src="js/enhanced-checkout.js"></script>
 <script src="https://api.pluggn.com.ng/template/primary/js/common.js" crossorigin="anonymous"></script>
 <script src="https://api.pluggn.com.ng/template/primary/js/marketplace.js" crossorigin="anonymous"></script>
 </body>
