--- a/public/templates/primary/index.html
+++ b/public/templates/primary/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Added color selection CSS -->
-    <link rel="stylesheet" href="css/color-selection.css">
+    <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/color-selection.css">
 </head>
 
 <body class="loading">
@@ -256,8 +256,8 @@
     <script src="https://api.pluggn.com.ng/template/primary/js/product.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/cart.js" crossorigin="anonymous"></script>
     <!-- Added color selection and enhanced checkout scripts -->
-    <script src="js/color-selection.js"></script>
-    <script src="js/enhanced-checkout.js"></script>
+    <script src="https://api.pluggn.com.ng/template/primary/js/color-selection.js"></script>
+    <script src="https://api.pluggn.com.ng/template/primary/js/enhanced-checkout.js"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/common.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/index.js" crossorigin="anonymous"></script>
 </body>
