--- a/public/templates/primary/product-details.html
+++ b/public/templates/primary/product-details.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/product-details.css"
         crossorigin="anonymous">
     <!-- Added color selection CSS -->
-    <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/color-selection.css">
+    <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/color-selection.css" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -304,8 +304,8 @@
         crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/cart.js" crossorigin="anonymous"></script>
     <!-- Added color selection and enhanced checkout scripts -->
-    <script src="https://api.pluggn.com.ng/template/primary/js/color-selection.js"></script>
-    <script src="https://api.pluggn.com.ng/template/primary/js/enhanced-checkout.js"></script>
+    <script src="https://api.pluggn.com.ng/template/primary/js/color-selection.js" crossorigin="anonymous"></script>
+    <script src="https://api.pluggn.com.ng/template/primary/js/enhanced-checkout.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/common.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/product-details.js" crossorigin="anonymous"></script>
 </body>
