--- a/public/templates/primary/index.html
+++ b/public/templates/primary/index.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Added color selection CSS -->
-    <link rel="stylesheet" href="https://api.pluggn.com.ng/template/primary/css/color-selection.css" crossorigin="anonymous">
+
+  
 </head>
 
 <body class="loading">
@@ -27,8 +27,8 @@
         <div class="container">
             <div class="header-content">
                 <h3 class="logo">
-
-                </h3>
+                
+                    </h3>
                 <nav class="main-nav">
                     <ul>
                         <li><a href="/" class="nav-link">Home</a></li>
@@ -85,8 +85,8 @@
         <div class="mobile-sidebar">
             <div class="sidebar-header">
                 <h3 class="logo">
-
-                </h3>
+                
+                    </h3>
                 <button class="sidebar-close">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -122,6 +122,7 @@
                     <a href="/marketplace" class="btn btn-primary">Shop Now</a>
                 </div>
             </div>
+           
 
             <div class="cart-modal-footer">
                 <div class="cart-total">
@@ -131,8 +132,8 @@
                 <button class="btn btn-primary btn-block checkout-btn">
                     Proceed to Checkout
                 </button>
-            </div>
-
+            </div>      
+        
         </div>
     </header>
 
@@ -202,10 +203,10 @@
                 <div class="footer-column">
                     <h3 class="footer-title">Customer Service</h3>
                     <ul class="footer-links">
-
+                      
                         <li><a href="#">Shipping</a></li>
                         <li><a href="#">Returns</a></li>
-
+                        
                         <li><a href="#">Payment Options</a></li>
                     </ul>
                 </div>
@@ -245,19 +246,14 @@
                 <p>&copy; 2023 Store. All rights reserved.</p>
                 <div class="powered-by">
                     <span>Powered by</span>
-                    <img src="https://api.pluggn.com.ng/image/pluggn_logo.png" crossorigin="anonymous" alt="Pluggn"
-                        class="brand-logo">
-                </div>
-            </div>
+                    <img src="https://api.pluggn.com.ng/image/pluggn_logo.png" crossorigin="anonymous" alt="Pluggn" class="brand-logo">
+                </div>      </div>
         </div>
     </footer>
 
     <!-- Scripts - Load in correct order -->
     <script src="https://api.pluggn.com.ng/template/primary/js/product.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/cart.js" crossorigin="anonymous"></script>
-    <!-- Added color selection and enhanced checkout scripts -->
-    <script src="https://api.pluggn.com.ng/template/primary/js/color-selection.js" crossorigin="anonymous"></script>
-    <script src="https://api.pluggn.com.ng/template/primary/js/enhanced-checkout.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/common.js" crossorigin="anonymous"></script>
     <script src="https://api.pluggn.com.ng/template/primary/js/index.js" crossorigin="anonymous"></script>
 </body>
