--- a/public/templates/primary/css/global.css
+++ b/public/templates/primary/css/global.css
@@ -1309,6 +1309,7 @@ p {
   border: 1px solid #ccc;
   padding: 6px 10px;
   border-radius: 6px;
+   text-transform: uppercase;
   cursor: pointer;
 }
 
