--- a/public/templates/primary/product-details.html
+++ b/public/templates/primary/product-details.html
@@ -217,8 +217,7 @@
                                         d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
                                     <path d="m9 12 2 2 4-4" />
                                 </svg>
-                                <span>We accept returns within 3 days of delivery, provided items are in good
-                                    condition</span>
+                                <span>We accept returns within 3 days of delivery, provided items meet our return policy</span>
                             </div>
 
                         </div>
