--- a/public/templates/primary/index.html
+++ b/public/templates/primary/index.html
@@ -214,7 +214,7 @@
                     <ul class="footer-links">
 
                         <li><a href="#">Shipping</a></li>
-                        <li><a href="#">Returns</a></li>
+                        <li><a href="https://pluggn.store/return">Return</a></li>
 
                         <li><a href="#">Payment Options</a></li>
                     </ul>
