--- a/public/templates/primary/css/global.css
+++ b/public/templates/primary/css/global.css
@@ -2046,6 +2046,7 @@ p {
   max-height: 180px;
   overflow-y: auto;
   display: none;
+  z-index: 100;
  
   box-shadow: 0 24px 48px rgba(2,6,23,0.12), 0 8px 16px rgba(2,6,23,0.08);
 }
