--- a/public/templates/primary/css/product-details.css
+++ b/public/templates/primary/css/product-details.css
@@ -374,7 +374,7 @@
     height: 50px;
   }
   
-  .product-features {
+  .product-rules {
     display: flex;
     flex-direction: column;
     gap: var(--spacing-2);
